@@ -18,7 +18,6 @@ import com.example.demo.order.dto.response.GetOrderResponse;
 import com.example.demo.order.entity.Order;
 import com.example.demo.order.service.OrderService;
 import jakarta.validation.Valid;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -39,17 +38,11 @@ public class OrderApplicationService {
   @Transactional(readOnly = true)
   public List<GetOrderResponse> getOrderItems(Long customerId) {
     Customer customer = customerService.findById(customerId);
-    List<Order> orders = orderService.findByCustomer(customer);
-    return GetOrderResponse.listOf(
-        orders.stream()
-            .map(order -> {
-              Clothes clothes = order.getClothes();
-              clothes.setImageUrl(s3Service.generatePresignedUrl(clothes.getImageUrl()));
-              clothes.setDetailUrl(s3Service.generatePresignedUrl(clothes.getDetailUrl()));
-              return order;
-            })
-            .collect(Collectors.toList())
-    );
+    return orderService.findByCustomer(customer).stream()
+        .map(order -> GetOrderResponse.from(order,
+            s3Service.generatePresignedUrl(order.getClothes().getImageUrl()),
+            s3Service.generatePresignedUrl(order.getClothes().getDetailUrl())))
+        .toList();
   }
 
   @Transactional(readOnly = true)
@@ -66,7 +59,7 @@ public class OrderApplicationService {
   public void addToOrderItem(Long customerId, @Valid AddToOrderItemRequest addToOrderItemRequest) {
     Cart cart = cartService.findByIdAndCustomerId(addToOrderItemRequest.cartId(), customerId);
     Customer customer = customerService.findById(customerId);
-    Address address = addressService.findOneByIdAndCustomer(addToOrderItemRequest.AddressId(), customer);
+    Address address = addressService.findOneByIdAndCustomer(addToOrderItemRequest.addressId(), customer);
     Payment payment = paymentService.findOneByIdAndCustomer(addToOrderItemRequest.paymentId(), customer);
 
     orderService.addToOrderItem(customer, cart, address, payment);
